Fix T84091: IDProperties/RNA: Crash due to colliding name between custom data and static RNA property.

We have to check that the RNAProperty found in `rna_idp_path` from the
currently checked IDProperty name is actually a real runtime RNA-defined
one, and not a static C-defined RNAProperty...